			ROX-Session
			A very simple session manager
			by Thomas Leonard

22-Apr-2004
~~~~~~~~~~~
Improved icon (Jonatan Liljedahl).

21-Apr-2004
~~~~~~~~~~~
Use a GtkScrolledWindow for the message log, so that the mouse wheel works
(Tristan McLeay).
Added Zero Install version of OroboROX to window manager list.

20-Apr-2004
~~~~~~~~~~~
Moved the Logout dialog box and the setup dialogs out of the main ROX-Session
program and into Python scripts. Made the setup dialogs a bit more friendly,
and allow installing ROX on the session manager list.

13-Apr-2004
~~~~~~~~~~~
Guide will get ROX-Filer through Zero Install if there's no local copy
(reported Taco Buitenhuis).

11-Apr-2004
~~~~~~~~~~~
Removed XSettings from GUI. Instead, a new D-BUS interface can be used to
change the settings from external programs.

10-Apr-2004
~~~~~~~~~~~
Start a session D-BUS daemon running on login, if one isn't running already.
Added 'Session Settings...' to app menu (uses dbus to send the request to
the master ROX-Session process).

05-Apr-2004
~~~~~~~~~~~
Updated Spanish translation (Marcelo Ramos).

03-Apr-2004
~~~~~~~~~~~
Allow Styles to be read from ~/Choices so the user can customize it
to match their theme (Stephen Watson).

19-Mar-2004
~~~~~~~~~~~
Changed the icon to a language-neutral one, based on fire exit signs (Stephen
Watson).

11-Feb-2004
~~~~~~~~~~~
Added a hint about where to install fonts.

19-Dec-2003
~~~~~~~~~~~
Added note about selecting 'Default' on the login screen.

24-Nov-2003
~~~~~~~~~~~
Updated Russian translation (Vladimir Popov).

21-Nov-2003
~~~~~~~~~~~
Added Lithuanian translation (Rimas Kudelis).

10-Nov-2003
~~~~~~~~~~~
Added AppMenu item to get quick access to the message log (Stephen Watson).

01-Nov-2003
~~~~~~~~~~~
Updated Dutch translation (Jan Wagemakers).

26-Oct-2003
~~~~~~~~~~~
Use apsymbols.h (from autopackage.org) if possible for binary compatibility
with older glibc versions. Use g_ascii_* functions instead of the ctypes ones
for the same reason.
