@@ -18,6 +18,12 @@ if [ ! -n "$CHOICESPATH" ]; then
 fi
 IFS=":"
 
+# If we're using Zero Install, start Zero Progress now so the user gets
+# some feedback if nothing happens for a bit (because we're downloading)
+if [ -d /uri/0install/zero-install.sourceforge.net ]; then
+	0run "zero-install.sourceforge.net/apps/ZeroProgress 2004-03-26" &
+fi
+
 # Run any other stuff the user wants by searching all the
 # Choices/ROX-Session/AutoStart directories...
 
