@@ -29,8 +29,10 @@ if [ -d /uri/0install/rox.sourceforge.net ]; then
   EDIT_PATH=/uri/0install/rox.sourceforge.net/apps/Edit
   0refresh rox.sourceforge.net/apps/Edit 2004-03-01
   EDIT="<icon label='Edit'>$EDIT_PATH</icon>"
+  APPS=/uri/0install/rox.sourceforge.net/apps
 else
   EDIT=""
+  APPS=`dirname "$1"`
 fi
 
 cat > "$PANEL" << EOF
@@ -38,7 +40,7 @@ cat > "$PANEL" << EOF
 <panel>
 <start>
 <icon label="Home">~</icon>
-<icon label="Apps">`dirname "$1"`</icon>
+<icon label="Apps">$APPS</icon>
 $DRIVES
 </start>
 <end>
